<resources>
    <string name="app_name">Buku Harianku</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_for_you">Untuk Anda</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="di_aplikasi_perhitungan_nilai_matakuliah">Di aplikasi perhitungan nilai MataKuliah</string>
    <string name="mulailah_mengevaluasi_nilai_matakuliah_perkuliahanmu_sekarang">Mulailah Mengevaluasi nilai MataKuliah perkuliahanmu sekarang</string>
    <string name="mulai_menghitung_nilai">Mulai Menghitung Nilai</string>
    <string name="dark_mode">Nyalakan/Matikan Dark Mode</string>
    <string name="selamat_datangg">Selamat datang</string>
    <string name="di_aplikasi_buku_harianku">Di aplikasi Buku Harianku</string>
    <string name="tanggal">Jumat, 1 Mei 2020</string>
    <string name="text_message">text message</string>
    <string name="tulis_pengalaman">Tulis Pengalaman</string>
    <string name="cari_motivasi">Cari Motivasi</string>
    <string name="sebuah_aplikasi_yang_dapat_membuat_kamu_menjadi_semangat_dalam_menjalani_aktifitas_kamu">Sebuah Aplikasi yang dapat membuat kamu menjadi semangat dalam menjalani aktifitas kamu !!</string>
    <string name="hapus_bukuharian">Hapus BukuHarian</string>
    <string name="insert">insert</string>
    <string name="success_insert">Berhasil menambahkan cerita!</string>
    <string name="success_update">Berhasil update cerita!</string>
    <string name="success_remove">Berhasil hapus cerita!</string>
    <string name="null_message">Cerita harus diisi!</string>
    <string name="tuliskan_pengalaman">Tuliskan Pengalaman</string>
    <string name="tuliskan_pengalaman_kamu_yang_berarti_dalam_hidup_kamu_dan_raihlah_hari_hari_kamu_dengan_mencari_motivasi_yang_membuat_kamu_semangat">Tuliskan pengalaman kamu yang berarti dalam hidup kamu dan raihlah hari hari kamu dengan mencari motivasi yang membuat kamu semangat</string>
    <string name="untuk_kamu">Untuk Kamu</string>
    <string name="gambar_buku_pengalaman">Gambar Buku Pengalaman</string>
    <string name="Selamat_datang">Selamat Datang</string>
    <string name="Sebuah_aplikasi_yang_dapat_membuat_kamu_menjadi_semangat_dalam_menjalani_aktifitas_kamu">sebuah aplikasi yang dapat membuat kamu menjadi semangat dalam menjalani aktifitas kamu</string>
    <string name="tulis_pengalaman_kamu">Tulis Pengalaman Kamu</string>
    <string name="cari_motivasi_kamu">Cari Motivasi Kamu</string>
    <string name="buku_harianku_merupakan_aplikasi_berisi_pencatatan_pengalaman_yang_penting_dan_mencari_motivasi_yang_baik_dan_positf">Buku Harianku merupakan aplikasi berisi pencatatan pengalaman yang penting dan mencari motivasi yang baik dan positf.</string>
    <string name="buku_harianku">Buku Harianku</string>
    <string name="mulailah_menuliskan_kisahmu_yang_paling_berharga_dalam_hidup_kamu_dan_mulailah_semangat_baru_dalam_hidupmu">Mulailah menuliskan kisahmu yang paling berharga dalam hidup kamu dan mulailah semangat baru dalam hidupmu.</string>
    <string name="about_apps">About Apps</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="lihat_daftar_pembayaran">Lihat Daftar Pembayaran</string>
    <string name="lihat_daftar_barang">Lihat Daftar Barang</string>
    <string name="edit_pembayaran">Edit Pembayaran</string>
    <string name="telur">Telur</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="beras">Beras</string>
    <string name="kg">kg</string>
    <string name="gula_pasir">Gula Pasir</string>
    <string name="garam">Garam</string>
    <string name="minyak_goreng">Minyak Goreng</string>
    <string name="liter">liter</string>
    <string name="daging_sapi">Daging Sapi</string>
    <string name="daging_ayam">Daging Ayam</string>
    <string name="susu">Susu</string>
    <string name="jagung">Jagung</string>
    <string name="mie_instan">Mie Instan</string>
    <string name="buah">buah</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="jumlah_harga">Jumlah Harga</string>
    <string name="jumlah_bayar">Jumlah Bayar</string>
    <string name="hitung">Hitung</string>
    <string name="kembalian">Kembalian</string>
    <string name="riwayat_pembayaran">Riwayat Pembayaran</string>
    <string name="tanggal_pelunasan">Tanggal Pelunasan</string>
    <string name="tambah_pembayaran">Tambah Pembayaran</string>
    <string name="nama_pembeli">Nama Pembeli</string>
    <string name="reset">Reset</string>
    <string name="daftar_belanja_harian">Daftar Belanja Harian</string>
    <string name="mari_kita_mendata_daftar_belanja_harian_kita_dan_melihat_daftar_barang_agar_bisa_menghemat_uang_kamu">Mari kita mendata daftar belanja harian kita dan melihat daftar barang agar bisa menghemat uang kamu</string>
    <string name="hallo_apa_kabar">Hallo, Apa kabar?</string>

</resources>
