<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">
    <data>
        <variable
            name="home"
            type="org.d3if4034.bukuharianku.HomeFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="344dp"
        android:layout_height="252dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:srcCompat="@drawable/main"
        android:contentDescription="@string/gambar_buku_pengalaman" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="413dp"
        android:layout_height="214dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:id="@+id/main_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_apps_identity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_identity"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_rounded_card_blue"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/tv_Bukuharianku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Selamat_datang"
                android:text="@string/selamat_datang"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_Deskripsi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/di_aplikasi_buku_harianku"
                android:text="@string/di_aplikasi_buku_harianku"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_deskripsi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Sebuah_aplikasi_yang_dapat_membuat_kamu_menjadi_semangat_dalam_menjalani_aktifitas_kamu"
                android:text="@string/sebuah_aplikasi_yang_dapat_membuat_kamu_menjadi_semangat_dalam_menjalani_aktifitas_kamu"
                android:textColor="@color/colorText"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/main_label_for_you"
            android:layout_width="397dp"
            android:layout_height="40dp"
            android:layout_below="@id/main_apps_identity"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/untuk_kamu"
            android:text="@string/untuk_kamu"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_label_for_you"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/deskripsian"
        android:layout_width="357dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/tuliskan_pengalaman_kamu_yang_berarti_dalam_hidup_kamu_dan_raihlah_hari_hari_kamu_dengan_mencari_motivasi_yang_membuat_kamu_semangat"
        android:text="@string/tuliskan_pengalaman_kamu_yang_berarti_dalam_hidup_kamu_dan_raihlah_hari_hari_kamu_dengan_mencari_motivasi_yang_membuat_kamu_semangat"
        android:textColor="@color/colorTextHeader"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_tambahpengalaman"
        android:layout_width="227dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/tulis_pengalaman_kamu"
        android:text="@string/tulis_pengalaman"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deskripsian"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_daftarbelanjaharian"
        android:layout_width="228dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:contentDescription="Daftar belanja harian"
        android:text="@string/daftar_belanja_harian"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_tambahpengalaman" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>