<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.AboutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="333dp"
            android:layout_height="288dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:srcCompat="@drawable/about" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/main_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_apps_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_rounded_card_blue"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/tv_Bukuharianku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="Buku Harianku merupakan aplikasi berisi pencatatan pengalaman yang penting dan mencari motivasi yang baik dan positf"
                    android:text="@string/buku_harianku_merupakan_aplikasi_berisi_pencatatan_pengalaman_yang_penting_dan_mencari_motivasi_yang_baik_dan_positf"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_Deskripsi1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription=""
                    android:text="@string/buku_harianku"
                    android:textColor="@color/colorText"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/main_label_for_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_apps_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/untuk_kamu"
                android:contentDescription="@string/untuk_kamu"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_label_for_you"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/deskripsian"
            android:layout_width="333dp"
            android:layout_height="82dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="Mulailah menuliskan kisahmu yang paling berharga dalam hidup kamu dan mulailah semangat baru dalam hidupmu"
            android:text="@string/mulailah_menuliskan_kisahmu_yang_paling_berharga_dalam_hidup_kamu_dan_mulailah_semangat_baru_dalam_hidupmu"
            android:textColor="@color/colorTextHeader"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>